js/src/jit-test/tests/binast/invalid/identifier-positional-parameter.binjs
BINJS
[
GRAMMAR
]
identity
;
"
BindingIdentifier
(
AssertedDeclaredName
AssertedParameterScope
>
AssertedPositionalParameterName2AssertedScriptGlobalScope
AssertedVarScope0EagerFunctionDeclaration
FormalParameters0FunctionOrMethodContents
Script
[
STRINGS
]
identity
;
f
1
a
var
[
TREE
]
identity
;
H
